# SPDB

./: .env.sample  .gitignore  PLAN.md  README.md  docker-compose.yaml  engine.py  justfile  visualizer.py
app/: Dockerfile  pyproject.toml
app/.streamlit/: config.toml
app/code/: db_utils.py  engine.py  helper.py  poi_suggester.py  visualizer.py
app/src/: db_utils.py  engine.py  enums.py  gpx_utils.py  helper.py  poi_suggester.py  visualizer.py  weights.py
db/osm_imports/: Dockerfile  import_osm.sh  mapconfig_bikes.xml
db/osm_imports/osmfilter/: all.txt  cycleways.txt  roads_paved.txt  roads_primary.txt  roads_secondary.txt  roads_unknown_surface.txt  roads_unpaved.txt
docs/: init_arch_diag.drawio
docs/final_report/: dokumentacja.md
pgadmin/: servers.json
postgres/: postgresql.conf
scripts/: download_all_data.sh
